# ucanjuschilll

./: .env.example  .env.local  .gitignore  Dockerfile  README.md  bootstrap_deploy.sh  cloudbuild.yaml  deployment.yaml  docker-compose.yml  go.mod  k8s.yaml  launch.sh  launch_clean.sh  main.go  next.config.js  package-lock.json  package.json  page.tsx  portmap_reserved.txt  setup.sh  tailwind.config.js  titan_full_launch.sh  titan_launch.sh  titan_port_audit.txt  titan_rebuild.sh
ASTRA/: astra_ai_worker.py  astra_deployment.sh  astra_docker_compose.txt  astra_docker_compose.yml  astra_env_template.txt  astra_go_api.go  astra_go_api_fixed.go  astra_ingest_main.rs  astra_testing.sh  launch_all_fixed.txt  launch_script.sh
ai-worker/: Dockerfile  main.py  requirements.txt
ai-worker/processors/: audio.py
ai-worker/services/: vertex_ai.py
frontend/: Dockerfile  next.config.js  next.config.ts  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AudioRecorder.tsx  Nav.tsx  PostCard.tsx  VideoRecorder.tsx
frontend/lib/: api.ts  auth.ts
frontend/types/: index.ts
go-api/: Dockerfile  go.mod  go.sum  main.go
go-api/db/: db.go
go-api/handlers/: auth.go  feed.go  handlers.go  posts.go  upload.go  users.go
go-api/middleware/: auth.go
go-api/models/: models.go
init-db/: 01_schema.sql
nginx/: nginx.conf
prisma/: schema.prisma  seed.ts
rust-ingest/: Cargo.toml  Dockerfile
rust-ingest/src/: main.rs
scripts/: push-to-registry.sh  setup-workload-identity.sh
src/: auth.ts  middleware.ts
(+42 files in other folders)
